--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
   --light: #F5F5FF;
   --success: #4CAF50;
 }
-
-/* Reset */
 * { margin:0; padding:0; box-sizing:border-box; }
 body { font-family:'Poppins', sans-serif; background:#f0f2f5; color:#333; overflow-x:hidden; }
 
@@ -61,28 +59,28 @@ section { padding:2rem 1rem; }
 .feature-icon { font-size:2rem; color: var(--primary); margin-bottom:0.5rem; }
 
 /* Horizontal Slider common */
-.horizontal-slider { display:flex; overflow-x:auto; gap:1rem; padding-bottom:1rem; scroll-behavior:smooth; }
+.horizontal-slider-container { position:relative; }
+.horizontal-slider { display:flex; overflow-x:auto; gap:1rem; padding-bottom:1rem; scroll-behavior:smooth; scroll-snap-type:x mandatory; }
 .horizontal-slider::-webkit-scrollbar { display:none; }
+.slider-card, .step { flex:0 0 250px; scroll-snap-align:center; background:white; border-radius:8px; padding:1rem; box-shadow:0 2px 8px rgba(0,0,0,0.1); transition: transform 0.3s; }
+.slider-card.active, .step.active { transform:scale(1.05); }
 
-/* Card Scaling Effect */
-.slider-card { flex:0 0 250px; background:white; border-radius:8px; padding:1rem; box-shadow:0 2px 8px rgba(0,0,0,0.1); transition: transform 0.3s; }
-.slider-card.active { transform: scale(1.05); }
-
-/* Groups Section */
-#groups { background:#f9f9f9; }
+/* Group card specifics */
 .group-icon { width:40px; height:40px; background:var(--primary); color:white; border-radius:8px; display:flex; justify-content:center; align-items:center; margin-bottom:0.5rem; }
 .join-btn { background:var(--success); color:white; padding:0.4rem 0.8rem; border-radius:4px; font-size:0.8rem; display:inline-block; margin-top:0.5rem; text-decoration:none; }
 
 /* How It Works */
-#how-it-works { background:white; }
-.step { flex:0 0 180px; background:var(--light); border-radius:8px; text-align:center; padding:1rem; transition: transform 0.3s; }
 .step-number { width:40px; height:40px; background: var(--primary); color:white; border-radius:50%; display:flex; align-items:center; justify-content:center; margin:0 auto 0.5rem; }
-.step.active { transform:scale(1.1); }
 
 /* Testimonials */
 #testimonials { background:#f9f9f9; }
 .testimonials-grid { display:flex; overflow-x:auto; gap:1rem; padding:1rem 0; }
 .testimonial-card { flex:0 0 280px; background:white; padding:1rem; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
+
+/* Arrow buttons */
+.slider-arrow { position:absolute; top:50%; transform:translateY(-50%); background:rgba(0,0,0,0.5); color:white; width:30px; height:30px; border-radius:50%; display:flex; align-items:center; justify-content:center; cursor:pointer; z-index:10; }
+.slider-arrow.left { left:0; }
+.slider-arrow.right { right:0; }
 
 /* Footer */
 footer { background:var(--dark); color:white; padding:1rem; text-align:center; }
@@ -94,6 +92,7 @@ footer { background:var(--dark); color:white; padding:1rem; text-align:center; }
 @media (max-width:768px){
   .features-grid { grid-template-columns:1fr; }
   .slider-card, .step { flex:0 0 70%; }
+  .slider-arrow { display:none; }
 }
 </style>
 </head>
@@ -148,27 +147,31 @@ footer { background:var(--dark); color:white; padding:1rem; text-align:center; }
 <!-- Groups Horizontal Slider -->
 <section id="groups">
   <h2 class="section-title">Popular Ludo Groups</h2>
-  <div class="horizontal-slider" id="groupsSlider">
-    <div class="slider-card">
-      <div class="group-icon"><i class="fas fa-crown"></i></div>
-      <h3>Ludo King Premium</h3>
-      <p>High-stakes matches with big payouts</p>
-      <div style="font-size:0.8rem; color:#666; margin:0.5rem 0;"><i class="fas fa-users"></i> 250+ members</div>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
-    </div>
-    <div class="slider-card">
-      <div class="group-icon"><i class="fas fa-star"></i></div>
-      <h3>Ludo Star Winners</h3>
-      <p>Friendly matches for all levels</p>
-      <div style="font-size:0.8rem; color:#666; margin:0.5rem 0;"><i class="fas fa-users"></i> 180+ members</div>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
-    </div>
-    <div class="slider-card">
-      <div class="group-icon"><i class="fas fa-bolt"></i></div>
-      <h3>FastWin Ludo</h3>
-      <p>Quick matches with instant payouts</p>
-      <div style="font-size:0.8rem; color:#666; margin:0.5rem 0;"><i class="fas fa-users"></i> 300+ members</div>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+  <div class="horizontal-slider-container">
+    <div class="slider-arrow left" data-target="groupsSlider"><i class="fas fa-chevron-left"></i></div>
+    <div class="slider-arrow right" data-target="groupsSlider"><i class="fas fa-chevron-right"></i></div>
+    <div class="horizontal-slider" id="groupsSlider">
+      <div class="slider-card">
+        <div class="group-icon"><i class="fas fa-crown"></i></div>
+        <h3>Ludo King Premium</h3>
+        <p>High-stakes matches with big payouts</p>
+        <div style="font-size:0.8rem; color:#666; margin:0.5rem 0;"><i class="fas fa-users"></i> 250+ members</div>
+        <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+      </div>
+      <div class="slider-card">
+        <div class="group-icon"><i class="fas fa-star"></i></div>
+        <h3>Ludo Star Winners</h3>
+        <p>Friendly matches for all levels</p>
+        <div style="font-size:0.8rem; color:#666; margin:0.5rem 0;"><i class="fas fa-users"></i> 180+ members</div>
+        <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+      </div>
+      <div class="slider-card">
+        <div class="group-icon"><i class="fas fa-bolt"></i></div>
+        <h3>FastWin Ludo</h3>
+        <p>Quick matches with instant payouts</p>
+        <div style="font-size:0.8rem; color:#666; margin:0.5rem 0;"><i class="fas fa-users"></i> 300+ members</div>
+        <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+      </div>
     </div>
   </div>
 </section>
@@ -176,21 +179,25 @@ footer { background:var(--dark); color:white; padding:1rem; text-align:center; }
 <!-- How It Works Horizontal Slider -->
 <section id="how-it-works">
   <h2 class="section-title">How It Works</h2>
-  <div class="horizontal-slider" id="stepsSlider">
-    <div class="step">
-      <div class="step-number">1</div>
-      <h3>Join Group</h3>
-      <p>Select from verified WhatsApp groups</p>
-    </div>
-    <div class="step">
-      <div class="step-number">2</div>
-      <h3>Play & Win</h3>
-      <p>Participate in matches and tournaments</p>
-    </div>
-    <div class="step">
-      <div class="step-number">3</div>
-      <h3>Earn Money</h3>
-      <p>Withdraw your winnings instantly</p>
+  <div class="horizontal-slider-container">
+    <div class="slider-arrow left" data-target="stepsSlider"><i class="fas fa-chevron-left"></i></div>
+    <div class="slider-arrow right" data-target="stepsSlider"><i class="fas fa-chevron-right"></i></div>
+    <div class="horizontal-slider" id="stepsSlider">
+      <div class="step">
+        <div class="step-number">1</div>
+        <h3>Join Group</h3>
+        <p>Select from verified WhatsApp groups</p>
+      </div>
+      <div class="step">
+        <div class="step-number">2</div>
+        <h3>Play & Win</h3>
+        <p>Participate in matches and tournaments</p>
+      </div>
+      <div class="step">
+        <div class="step-number">3</div>
+        <h3>Earn Money</h3>
+        <p>Withdraw your winnings instantly</p>
+      </div>
     </div>
   </div>
 </section>
@@ -198,7 +205,7 @@ footer { background:var(--dark); color:white; padding:1rem; text-align:center; }
 <!-- Testimonials Horizontal Slider -->
 <section id="testimonials">
   <h2 class="section-title">Player Reviews</h2>
-  <div class="testimonials-grid">
+  <div class="testimonials-grid horizontal-slider" id="testimonialsSlider">
     <div class="testimonial-card">
       <p>"Earned ₹15,000 in one month! Withdrawals are really instant."</p>
       <div style="display:flex; align-items:center; margin-top:1rem;">
@@ -242,12 +249,12 @@ footer { background:var(--dark); color:white; padding:1rem; text-align:center; }
   <p style="font-size:0.8rem;opacity:0.8;">© 2025 JokerLudo Group. All Rights Reserved.</p>
 </footer>
 
-<!-- JS for Horizontal Slider Active Card -->
 <script>
-function initSlider(sliderId, cardClass){
+// Slider Active Card & Auto Slide
+function initSlider(sliderId, cardClass, autoSlide=true, interval=3000){
   const slider = document.getElementById(sliderId);
   const cards = slider.querySelectorAll(cardClass);
-  
+
   function setActiveCard(){
     const sliderCenter = slider.scrollLeft + slider.offsetWidth/2;
     let closestCard = null;
@@ -264,11 +271,36 @@ function initSlider(sliderId, cardClass){
   slider.addEventListener('scroll', setActiveCard);
   window.addEventListener('resize', setActiveCard);
   setActiveCard();
+
+  // Auto Slide
+  if(autoSlide){
+    let currentIndex = 0;
+    let slideInterval = setInterval(()=>{
+      currentIndex = (currentIndex + 1) % cards.length;
+      slider.scrollTo({ left: cards[currentIndex].offsetLeft, behavior:'smooth' });
+    }, interval);
+
+    slider.addEventListener('mouseenter', ()=>clearInterval(slideInterval));
+    slider.addEventListener('touchstart', ()=>clearInterval(slideInterval));
+  }
 }
 
+// Arrow Navigation
+document.querySelectorAll('.slider-arrow').forEach(arrow=>{
+  const targetId = arrow.getAttribute('data-target');
+  const slider = document.getElementById(targetId);
+  arrow.addEventListener('click', ()=>{
+    const cardWidth = slider.querySelector(':first-child').offsetWidth + 16; // gap
+    if(arrow.classList.contains('left')){
+      slider.scrollBy({ left: -cardWidth, behavior:'smooth' });
+    } else { slider.scrollBy({ left: cardWidth, behavior:'smooth' }); }
+  });
+});
+
+// Initialize Sliders
 initSlider('groupsSlider', '.slider-card');
 initSlider('stepsSlider', '.step');
+initSlider('testimonialsSlider', '.testimonial-card');
 </script>
-
 </body>
 </html>
