--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
     }
     .nav-links a:hover { background: var(--primary); color: var(--light); }
 
-    .horizontal-container { display: flex; flex-direction: column; }
-
     /* Hero Section */
     #hero {
       background: linear-gradient(135deg, #FF3B30, #1B1B1F, #0A84FF);
@@ -58,42 +56,48 @@
     .btn-secondary { background: rgba(255,255,255,0.1); color: var(--light); }
     .btn-secondary:hover { background: var(--secondary); color: var(--light); }
 
-    /* Features Section */
     section { padding: 3rem 1rem; }
+
+    /* Features */
     #features { background: #111; }
     .section-title { font-size: 2rem; text-align: center; margin-bottom: 2rem; color: var(--primary); }
     .features-grid { display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center; }
-    .feature-card {
-      background: #222; padding: 1.5rem; border-radius: 12px; text-align: center; width: 250px; transition: all 0.3s;
-    }
+    .feature-card { background: #222; padding: 1.5rem; border-radius: 12px; text-align: center; width: 250px; transition: transform 0.3s, box-shadow 0.3s; }
     .feature-card:hover { transform: translateY(-5px); box-shadow: 0 5px 15px rgba(10,132,255,0.4); }
     .feature-icon { font-size: 2.5rem; color: var(--primary); margin-bottom: 0.5rem; }
     .feature-card h3 { margin-bottom: 0.5rem; color: var(--light); }
     .feature-card p { color: #ccc; font-size: 0.95rem; }
 
-    /* Groups Section */
-    #groups { background: #0F0F0F; }
-    .groups-container { display: flex; overflow-x: auto; gap: 1rem; padding: 1rem 0; scroll-behavior: smooth; }
-    .group-card { min-width: 260px; background: #1C1C1E; padding: 1rem; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.5); transition: transform 0.3s; }
-    .group-card:hover { transform: scale(1.05); }
+    /* Horizontal Scrolling Sections with 3D effect */
+    .horizontal-scroll { display: flex; gap: 1rem; overflow-x: auto; scroll-behavior: smooth; padding-bottom: 1rem; }
+    .horizontal-scroll::-webkit-scrollbar { height: 10px; }
+    .horizontal-scroll::-webkit-scrollbar-thumb { background: var(--primary); border-radius: 5px; }
+
+    .card {
+      min-width: 260px;
+      background: #1C1C1E;
+      padding: 1rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+      transition: transform 0.4s, box-shadow 0.4s;
+      perspective: 1000px;
+    }
+    .card:hover { transform: rotateY(10deg) scale(1.05); box-shadow: 0 10px 20px rgba(255,59,48,0.6); }
+
     .group-icon { width: 45px; height: 45px; background: var(--primary); color: var(--light); border-radius: 10px; display: flex; justify-content: center; align-items: center; margin-bottom: 0.5rem; }
-    .group-card h3 { margin-bottom: 0.3rem; }
-    .group-card p { font-size: 0.9rem; color: #ccc; }
     .join-btn { background: var(--success); color: var(--light); padding: 0.5rem 1rem; border-radius: 6px; font-size: 0.85rem; display: inline-block; margin-top: 0.5rem; text-decoration: none; transition: all 0.3s; }
     .join-btn:hover { background: var(--primary); }
 
     /* How It Works */
     #how-it-works { background: #111; }
-    .steps { display: flex; gap: 1rem; overflow-x: auto; padding: 1rem 0; scroll-behavior: smooth; }
-    .step { min-width: 220px; background: #222; padding: 1.5rem; border-radius: 12px; text-align: center; transition: transform 0.3s; }
-    .step:hover { transform: translateY(-5px); box-shadow: 0 5px 15px rgba(255,59,48,0.5); }
+    .steps .step { min-width: 220px; background: #222; padding: 1.5rem; border-radius: 12px; text-align: center; transition: transform 0.3s, box-shadow 0.3s; }
+    .step:hover { transform: rotateY(10deg) scale(1.05); box-shadow: 0 10px 20px rgba(255,59,48,0.5); }
     .step-number { width: 45px; height: 45px; border-radius: 50%; background: var(--primary); display: flex; justify-content: center; align-items: center; margin: 0 auto 0.5rem; color: var(--light); font-weight: 700; }
 
     /* Testimonials */
     #testimonials { background: #0F0F0F; }
-    .testimonials-grid { display: flex; gap: 1rem; overflow-x: auto; padding: 1rem 0; }
-    .testimonial-card { min-width: 280px; background: #1C1C1E; padding: 1.2rem; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.5); transition: transform 0.3s; }
-    .testimonial-card:hover { transform: scale(1.05); }
+    .testimonial-card { min-width: 280px; background: #1C1C1E; padding: 1.2rem; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.5); transition: transform 0.4s; }
+    .testimonial-card:hover { transform: rotateY(10deg) scale(1.05); box-shadow: 0 10px 20px rgba(10,132,255,0.5); }
     .testimonial-card p { color: #ccc; font-size: 0.95rem; margin-bottom: 1rem; }
 
     /* Footer */
@@ -103,20 +107,15 @@
     .footer-links a:hover, .social-links a:hover { color: var(--primary); }
     .copyright { font-size: 0.8rem; color: #aaa; }
 
-    /* Responsive */
     @media (max-width: 768px) {
-      .features-grid, .steps, .testimonials-grid, .groups-container { flex-wrap: nowrap; }
-      .step, .feature-card, .testimonial-card, .group-card { min-width: 220px; }
+      .features-grid, .horizontal-scroll { flex-wrap: nowrap; }
+      .step, .feature-card, .testimonial-card, .card { min-width: 220px; }
     }
   </style>
 </head>
 <body>
-  <!-- Header -->
   <header>
-    <div class="logo">
-      <img src="WhatsApp Image 2025-07-27 at 10.45.50.jpeg" alt="Logo">
-      JokerLudo
-    </div>
+    <div class="logo"><img src="WhatsApp Image 2025-07-27 at 10.45.50.jpeg" alt="Logo"> JokerLudo</div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="rules.html">Rules</a>
@@ -149,20 +148,20 @@
   <!-- Groups -->
   <section id="groups">
     <h2 class="section-title">Popular Ludo Groups</h2>
-    <div class="groups-container">
-      <div class="group-card">
+    <div class="horizontal-scroll">
+      <div class="card group-card">
         <div class="group-icon"><i class="fas fa-crown"></i></div>
         <h3>Ludo King Premium</h3>
         <p>High-stakes matches with big payouts.</p>
         <a href="#" class="join-btn">Join Now</a>
       </div>
-      <div class="group-card">
+      <div class="card group-card">
         <div class="group-icon"><i class="fas fa-star"></i></div>
         <h3>Ludo Star Winners</h3>
         <p>Friendly matches for all levels.</p>
         <a href="#" class="join-btn">Join Now</a>
       </div>
-      <div class="group-card">
+      <div class="card group-card">
         <div class="group-icon"><i class="fas fa-bolt"></i></div>
         <h3>FastWin Ludo</h3>
         <p>Quick matches with instant payouts.</p>
@@ -174,7 +173,7 @@
   <!-- How It Works -->
   <section id="how-it-works">
     <h2 class="section-title">How It Works</h2>
-    <div class="steps">
+    <div class="horizontal-scroll steps">
       <div class="step"><div class="step-number">1</div><h3>Join Group</h3><p>Select from verified groups.</p></div>
       <div class="step"><div class="step-number">2</div><h3>Play & Win</h3><p>Participate in matches & tournaments.</p></div>
       <div class="step"><div class="step-number">3</div><h3>Earn Money</h3><p>Withdraw winnings instantly.</p></div>
@@ -184,10 +183,10 @@
   <!-- Testimonials -->
   <section id="testimonials">
     <h2 class="section-title">Player Reviews</h2>
-    <div class="testimonials-grid">
-      <div class="testimonial-card"><p>"Earned ₹15,000 in one month! Withdrawals are instant."</p><strong>Rahul Sharma</strong></div>
-      <div class="testimonial-card"><p>"Admin support is excellent. Resolved my payment issue in minutes."</p><strong>Priya Patel</strong></div>
-      <div class="testimonial-card"><p>"Won ₹3,200 in my first tournament! Groups are well-managed."</p><strong>Amit Kumar</strong></div>
+    <div class="horizontal-scroll testimonials-grid">
+      <div class="testimonial-card card"><p>"Earned ₹15,000 in one month! Withdrawals are instant."</p><strong>Rahul Sharma</strong></div>
+      <div class="testimonial-card card"><p>"Admin support is excellent. Resolved my payment issue in minutes."</p><strong>Priya Patel</strong></div>
+      <div class="testimonial-card card"><p>"Won ₹3,200 in my first tournament! Groups are well-managed."</p><strong>Amit Kumar</strong></div>
     </div>
   </section>
 
