--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 <div class="cta-section" style="margin: 40px 20px;">
   <div class="cta-buttons">
     <a href="addgroup.html" class="cta-btn primary-btn">Add Your Group</a>
-    <a href="join.html" class="cta-btn secondary-btn">Join Joker Ludo Group</a>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="cta-btn secondary-btn">Join Joker Ludo Group</a>
   </div>
 </div>
 
