--- a/privacy.html
+++ b/privacy.html
@@ -13,59 +13,56 @@
 
   <title>Privacy Policy – JokerLudo</title>
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<!-- Canonical -->
+<link rel="canonical" href="https://ludogrouplink.com/privacy.html" />
 
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
- <!-- SEO Meta Tags -->
-  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
-  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
-  <meta name="author" content="JokerLudo Group" />
-  <meta name="robots" content="index, follow" />
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
+<!-- Favicon -->
+<link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
 
-  <!-- Google Site Verification -->
-  <meta name="google-site-verification" content="google-site-verification-code-here" />
+<!-- SEO Meta Tags -->
+<meta name="description" content="Read JokerLudo's Privacy Policy 2025. Learn how we collect, use, and protect user data while providing verified Ludo WhatsApp groups. Safe, trusted online Ludo group links, real cash Ludo games, online Ludo earning, and secure gameplay in India." />
+<meta name="keywords" content="privacy policy jokerludo, ludo whatsapp group privacy, verified ludo group links, online ludo group data protection, ludo king group privacy, safe ludo groups, real cash ludo, earn money online ludo, trusted ludo whatsapp groups, ludo group links privacy 2025" />
+<meta name="author" content="JokerLudo Group" />
+<meta name="robots" content="index, follow" />
+<meta name="google-site-verification" content="google-site-verification-code-here" />
 
-  <!-- Google Analytics (G-EZF7SRX6EJ) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-EZF7SRX6EJ');
-  </script>
+<!-- Open Graph -->
+<meta property="og:title" content="JokerLudo Privacy Policy - Safe & Trusted Ludo WhatsApp Groups" />
+<meta property="og:description" content="Learn about JokerLudo's privacy practices. Protecting user data while providing verified Ludo WhatsApp groups, online Ludo earning, and real cash Ludo games. Trusted, safe, and secure Ludo King group links in India." />
+<meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+<meta property="og:url" content="https://ludogrouplink.com/privacy.html" />
+<meta property="og:type" content="website" />
 
-  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
-  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
-  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
-  <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
-  <meta property="og:url" content="https://ludogrouplink.com/" />
-  <meta property="og:type" content="website" />
+<!-- Twitter Cards -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="JokerLudo Privacy Policy - Trusted Ludo WhatsApp Groups" />
+<meta name="twitter:description" content="Read JokerLudo's Privacy Policy 2025. Know how we protect data while providing verified Ludo WhatsApp groups, online Ludo earning, and real cash Ludo games. Safe, trusted, and secure for Indian players." />
+<meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
 
-  <!-- Twitter Cards -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
-  <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
-  <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
-
-  <!-- Schema.org JSON-LD -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "JokerLudo Group",
-    "url": "https://ludogrouplink.com",
-    "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
-    "sameAs": [
-      "https://www.facebook.com/JokerLudo",
-      "https://www.instagram.com/JokerLudo"
-    ]
+<!-- Schema.org JSON-LD -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "JokerLudo Group",
+  "url": "https://ludogrouplink.com/privacy.html",
+  "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
+  "sameAs": [
+    "https://www.facebook.com/JokerLudo",
+    "https://www.instagram.com/ludo.grouplink/",
+    "https://x.com/RohitKumar25718",
+    "https://www.youtube.com/channel/YourChannelID"
+  ],
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://ludogrouplink.com/?s={search_term_string}",
+    "query-input": "required name=search_term_string"
   }
-  </script>
+}
+</script>
 
   <style>
     body {
