--- a/addgroup.html
+++ b/addgroup.html
@@ -6,6 +6,57 @@
   <title>Add Group - LudoGroup</title>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <!-- Canonical -->
+<link rel="canonical" href="https://ludogrouplink.com/addgroup.html" />
+
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+
+<!-- Favicon -->
+<link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
+
+<!-- SEO Meta Tags -->
+<meta name="description" content="Submit your Ludo WhatsApp group to JokerLudo 2025. Reach Indian Ludo players, earn money online by playing Ludo, and get your verified group featured. Trusted, safe, and high-paying Ludo groups for real cash gameplay." />
+<meta name="keywords" content="submit ludo group, add ludo whatsapp group, ludo group link 2025, online ludo earning, verified ludo groups, real cash ludo games, ludo king group link, whatsapp ludo group submission, best ludo group links, join ludo whatsapp, trusted ludo groups" />
+<meta name="author" content="JokerLudo Group" />
+<meta name="robots" content="index, follow" />
+<meta name="google-site-verification" content="google-site-verification-code-here" />
+
+<!-- Open Graph -->
+<meta property="og:title" content="Add Your Ludo Group - JokerLudo 2025" />
+<meta property="og:description" content="Submit your Ludo WhatsApp group to JokerLudo and reach thousands of Indian players. Earn money online by playing Ludo, showcase verified group links, and join high-paying Ludo King gameplay." />
+<meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+<meta property="og:url" content="https://ludogrouplink.com/addgroup.html" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Cards -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Add Your Ludo Group - JokerLudo" />
+<meta name="twitter:description" content="Submit your verified Ludo WhatsApp group and reach Indian Ludo players. Earn money online playing Ludo, join top Ludo King groups, and get featured on JokerLudo." />
+<meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+
+<!-- Schema.org JSON-LD -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "JokerLudo Group",
+  "url": "https://ludogrouplink.com/addgroup.html",
+  "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
+  "sameAs": [
+    "https://www.facebook.com/JokerLudo",
+    "https://www.instagram.com/ludo.grouplink/",
+    "https://x.com/RohitKumar25718",
+    "https://www.youtube.com/channel/YourChannelID"
+  ],
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://ludogrouplink.com/?s={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </div>
   <style>
